# KalaModel

./: CMakeLists.txt  LICENSE.md  README.md
_external_shared/Assimp/: CHANGES.txt  build_debug.bat  build_release.bat
_external_shared/Assimp/debug/: assimp-vc143-mtd.lib
_external_shared/Assimp/include/: AssertHandler.h  Base64.hpp  BaseImporter.h  BlobIOSystem.h  ByteSwapper.h  CreateAnimMesh.h  DefaultIOStream.h  DefaultIOSystem.h  Exceptional.h  GenericProperty.h  GltfMaterial.h  IOStream.hpp  IOStreamBuffer.h  Importer.hpp  LineSplitter.h  LogAux.h  Logger.hpp  MemoryIOWrapper.h  ObjMaterial.h  ParsingUtils.h  Profiler.h  ProgressHandler.hpp  RemoveComments.h  SGSpatialSort.h  SceneCombiner.h  SkeletonMeshBuilder.h  SmoothingGroups.h  SmoothingGroups.inl  SpatialSort.h  StandardShapes.h  StreamReader.h  StreamWriter.h  StringComparison.h  StringUtils.h  Subdivision.h  Vertex.h  XmlParser.h  ZipArchiveIOSystem.h  aabb.h  ai_assert.h  (+28 more)
_external_shared/Assimp/release/: assimp-vc143-mt.lib
_external_shared/KalaHeaders/: import_kmf.hpp
include/: export.hpp  parse.hpp
src/: export.cpp  main.cpp  parse.cpp
test_models/: test.fbx  test.kmd
